# Sales-Bot

backend/: .env  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  metrics.db  pyproject.toml  qa_summary.json  requirements.txt  test_voice.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py  5786444b71d6_add_products_and_orders.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  catalog.py  chat.py  procurement.py  simulation.py
backend/app/core/: __init__.py  config_layer.py  conversation_analyzer.py  customer_simulator.py  digital_twin.py  financial_evaluator.py  intent_classifier.py  negotiation_scorer.py  response_generator.py  sales_response_formatter.py  simulation_engine.py  strategy_optimizer.py
backend/app/db/: __init__.py  base.py  postgres.py
backend/app/models/: __init__.py  conversation.py  customer.py  locked_deal.py  negotiation_context.py  order.py  product.py  product_specification.py  simulation.py
backend/app/schemas/: __init__.py  chat.py  product.py  simulation.py
backend/app/services/: __init__.py  customer_profile_builder.py  customer_service.py  llm_service.py  product_intelligence_generator.py  product_knowledge_service.py  (+4 more)
backend/scripts/: ingest_customers.py  ingest_products.py  run_manual_qa.py
backend/tests/: test_api.py  test_behavior_polish.py  test_deterministic.py  test_groq.py  test_integration_groq.py  test_knowledge.py  test_procurement.py  test_product_intelligence.py  test_refinement.py  test_regression_fixes.py  test_stabilization.py
(+41 files in other folders)
